# pynecone-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pcconfig.py  pyproject.toml  requirements.txt
app/: app.py  state.py
app/pages/: counter.py  index.py
pynecone_playground/: pynecone_playground.py
